# sigmut

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.ja.md  README.md
.github/workflows/: ci.yml  rust.yml
bench/: Cargo.toml
bench/benches/: benchmarks.rs
benches/: benchmarks.rs  my_benchmark.rs  reactive.rs
doc/: cheat-sheet-for-other-framework-users.md  cheet-sheet-for-other-framework-users.md
docs/plan/: 2026-07-18_try_borrow_constantとbool演算の定数最適化.md
docs/plan_archive/: 2026-07-19_Runtimeの有効Phase設定.md  2026-07-20_SignalVecReaderのClone.md  2026-07-20_SignalVecReaderのpeek.md  2026-07-20_SignalVecReaderの内部読み取り統合.md  2026-07-22_Signalのdiscard後再購読.md
examples/: signal_vec.rs
macros/: Cargo.toml
macros/src/: lib.rs  signal_format_impl.rs  syn_utils.rs  timeout_impl.rs
reactive-fn/: Cargo.toml
reactive-fn-async-std/: Cargo.toml
reactive-fn-async-std/src/: lib.rs
reactive-fn-async-std/tests/: tests_async_std.rs
reactive-fn-bench/: Cargo.toml
reactive-fn-bench-std/: Cargo.toml
reactive-fn-bench-std/benches/: benches.rs
reactive-fn-bench/benches/: benches.rs
reactive-fn-bench/examples/: many_subscription.rs
reactive-fn-benchmark/: Cargo.toml
reactive-fn-benchmark/benches/: bench.rs  reactive.rs
reactive-fn-macros/: Cargo.toml
reactive-fn-macros/src/: bounds.rs  derive_observable_fmt.rs  lib.rs  obs_format_macro.rs  syn_utils.rs
reactive-fn-smol/: Cargo.toml
reactive-fn-smol/src/: lib.rs
reactive-fn-smol/tests/: tests_smol.rs
reactive-fn-tokio/: Cargo.toml
reactive-fn-tokio/src/: lib.rs
reactive-fn-tokio/tests/: tests_tokio.rs
reactive-fn/benches/: benchmarks.rs
reactive-fn/src/: async_runtime.rs  bind.rs  bind_context_builder.rs  cache.rs  cell.rs  collections.rs  collector.rs  core.rs  dyn_obs.rs  dyn_obs_borrow.rs  dyn_obs_ref.rs  dyn_observable.rs  dynamic_obs.rs  extensions.rs  fmt.rs  fold.rs  functions.rs  helpers.rs  hot.rs  into_obs_borrow.rs  into_obs_value.rs  into_stream.rs  lib.rs  map_async.rs  map_stream.rs  may_obs.rs  obs.rs  obs_borrow.rs  obs_callback.rs  obs_from_async.rs  obs_from_stream.rs  obs_ref.rs  observable.rs  observables.rs  observer.rs  observer_context.rs  prelude.rs  reactive.rs  runtime.rs  scan.rs  (+12 more)
reactive-fn/src/collections/: dyn_obs_list.rs  index_iter.rs  list_change.rs  obs_list.rs  obs_list_cell.rs  obs_list_iter.rs  shared_array.rs  slab_map.rs  source_list.rs  utils.rs  vec.rs
reactive-fn/src/collections/slab_map/: cell.rs
reactive-fn/src/collections/utils/: change_logs.rs  changes.rs
reactive-fn/src/collections/vec/: cell.rs  obs_vec.rs
reactive-fn/src/collections/vec/cell/: cell_tests.rs
reactive-fn/src/collector/: collectors.rs  obs_collector.rs
reactive-fn/src/core/: action.rs  bind.rs  dependency_node.rs  dependency_token.rs  idle_task.rs  obs_ref.rs  obs_ref_builder.rs  runtime.rs  weak_task.rs
reactive-fn/src/extensions/: async_std.rs  tokio.rs
reactive-fn/src/helpers/: dependency_node.rs  dependency_token.rs
reactive-fn/src/observable/: cell.rs  from_async.rs  hot.rs  mode.rs  obs.rs  obs_builder.rs  obs_callback.rs  obs_ref.rs  obs_value.rs  observable_trait.rs  override_node_settings.rs  scan.rs  stream.rs  subscription.rs
reactive-fn/src/observables/: cell.rs  collectors.rs  dyn_obs.rs  dyn_obs_borrow.rs  dyn_obs_ref.rs  dynamic_obs.rs  hot.rs  into_dyn_obs_ref.rs  map_async.rs  may_obs.rs  may_re.rs  obs.rs  obs_borrow.rs  obs_ref.rs  re.rs  re_borrow_ops.rs  re_ops.rs  re_ref.rs  re_ref_ops.rs  scan.rs  source.rs  source_ref.rs  tail.rs  value_obs.rs
reactive-fn/src/observables/collector/: collectors.rs  obs_collector.rs
reactive-fn/src/reactive/: cell.rs  hot.rs  into_stream.rs  map_async.rs  re.rs  re_borrow.rs  re_borrow_ops.rs  re_ops.rs  re_ref.rs  re_ref_ops.rs  scan.rs  tail.rs
reactive-fn/tests/: cell.rs  collections.rs  core.rs  dyn_obs.rs  dyn_obs_borrow.rs  dyn_obs_ref.rs  dyn_observable.rs  extensions_smol.rs  extensions_tokio.rs  fmt.rs  functions.rs  into_dyn_obs.rs  into_dyn_obs_ref.rs  into_obs_borrow.rs  into_obs_value.rs  into_re.rs  into_source.rs  into_source_borrow.rs  obs.rs  obs_list_cell.rs  obs_ref.rs  observable.rs  re.rs  re_borrow.rs  re_ops.rs  re_ref.rs  re_ref_ops.rs  root.rs  source_ref.rs  tests_async.rs
reactive-fn/tests/collections/: vec.rs
reactive-fn/tests/compile_fail/obs_ref/: map_ref_lifetime.rs  map_ref_lifetime.stderr
reactive-fn/tests/core/: action.rs  node.rs  runtime.rs
reactive-fn/tests/observable/: cell.rs  obs.rs  subscription.rs
reactive-fn/tests/test_utils/: code_path.rs  mod.rs  task.rs
reactive-fn/tests_/: dyn_obs.rs  fmt.rs  obs.rs  source_ref.rs
src/: bind.rs  bind_ext.rs  binding.rs  cell.rs  collections.rs  core.rs  dyn_bind.rs  effect_async_fn.rs  effect_fn.rs  event.rs  fmt.rs  lib.rs  main.rs  reactive.rs  signal.rs  smol_utils.rs  state.rs  stream.rs  subscribe_async_fn.rs  subscribe_fn.rs  subscription.rs  tests_readme.rs  tokio_utils.rs  utils.rs
src/collections/: slab_map.rs  vec.rs
src/core/: async_signal_context.rs  async_source_binder.rs  dirty.rs  source_binder.rs  state_ref.rs  state_ref_builder.rs  tests.rs
src/effect_async_fn/: tests.rs
src/effect_fn/: tests.rs
src/extensions/: smol.rs
src/fmt/: helpers.rs  tests.rs
src/reactive/: cached.rs  cell.rs  dyn_re.rs  dyn_re_borrow.rs  dyn_re_ref.rs  for_each.rs  hot.rs  into_stream.rs  map_async.rs  may_re.rs  ops.rs  re.rs  re_borrow.rs  re_borrow_ops.rs  re_ops.rs  re_ref.rs  re_ref_ops.rs  scan.rs  scan2.rs  tail.rs  to_stream.rs
src/signal/: builder.rs  scan_async.rs  signal_t.rs
src/state/: tests.rs
src/subscription/: tests.rs
src/utils/: buckets.rs  isize_map.rs  sync.rs  test_helpers.rs  tests.rs  timer.rs  vec_arena.rs
tests/: cell.rs  core.rs  extensions_async_std.rs  extensions_smol.rs  extensions_tokio.rs  fmt.rs  fmt_use_named_by_index.rs  may_re.rs  re.rs  re_borrow.rs  re_cow.rs  re_ops.rs  re_ref.rs  re_ref_ops.rs  reactive.rs  should_timeout.rs  smol_utils.rs  test_utils.rs  timeout.rs  timeout_compile_fail.rs  tokio_utils.rs
tests/core/: state_ref.rs
(+23 files in other folders)
