[workspace]
members = ["macros"]

[package]
name = "sigmut"
version = "0.0.1"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/sigmut"
documentation = "https://docs.rs/sigmut/"
keywords = ["state-management", "reactive", "signals"]
categories = ["rust-patterns"]
description = "a state management framework designed to be used as a foundation for UI frameworks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sigmut-macros = { version = "0.0.1", path = "macros" }
slabmap = "0.2.1"
bumpalo = "3.16.0"
derive-ex = "0.1.8"
serde = "1.0.203"
futures = "0.3.30"
iter-n = "0.1.0"
parse-display = "0.9.0"


[dev-dependencies]
assert-call = "0.1.1"
rstest = "0.20.0"
rt-local = "0.1.4"
