[workspace]
members = ["bench", "macros"]

[package]
name = "sigmut"
version = "0.0.2"
edition = "2024"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/sigmut"
documentation = "https://docs.rs/sigmut/"
keywords = ["state-management", "reactive", "signals"]
categories = ["rust-patterns"]
description = "a state management framework designed to be used as a foundation for UI frameworks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sigmut-macros = { version = "0.0.2", path = "macros" }
slabmap = "0.2.1"
bumpalo = "3.18.1"
derive-ex = "0.1.8"
serde = "1.0.219"
futures = "0.3.31"
iter-n = "0.1.0"
parse-display = "0.10.0"


[dev-dependencies]
assert-call = "0.1.2"
rstest = "0.25.0"
rt-local = "0.1.4"
trybuild = "1.0.105"
serde_json = "1.0.140"
