[package]
name = "sigmut-macros"
version = "0.0.2"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/sigmut"
documentation = "https://docs.rs/sigmut/"
description = "a state management framework designed to be used as a foundation for UI frameworks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0.71"
quote = "1.0.36"
proc-macro2 = "1.0.86"
regex = "1.10.5"
