[package]
name = "reactive-fn-async-std"
version = "0.1.0"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
async-std = { version = "1.9.0", features = ["unstable"] }
reactive-fn = { path = "../reactive-fn" }
