[package]
name = "reactive-fn-bench"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bench]]
name = "benches"
harness = false

[dependencies]
reactive-fn = { path = "../reactive-fn" }

[dev-dependencies]
criterion = "0.5.1"


[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.12.1", features = ["flamegraph"] }
