[package]
name = "reactive-fn-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.105"
quote = "1.0.21"
proc-macro2 = "1.0.47"
regex = "1.7.0"
once_cell = "1.16.0"
structmeta = "0.1.5"
