[package]
name = "reactive-fn-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.37", features = ["extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.67"
regex = "1.9.6"
once_cell = "1.18.0"
structmeta = "0.2.0"
