[package]
name = "reactive-fn-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = ["extra-traits"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"
regex = "1.10.3"
once_cell = "1.19.0"
structmeta = "0.3.0"
