[package]
name = "reactive-fn-smol"
version = "0.1.0"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "0.1"
extend = "0.1"
futures = "0.3"
reactive-fn = { path = "../reactive-fn" }