[package]
name = "reactive-fn-smol"
version = "0.1.0"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2"
extend = "0.3"
futures = "0.3"
scoped-tls = "0.1"
reactive-fn = { path = "../reactive-fn" }