[package]
name = "reactive-fn-smol"
version = "0.1.0"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.4.0"
async-task = "4.0.3"
futures = "0.3.14"
reactive-fn = { path = "../reactive-fn" }

[dev-dependencies]
smol = "1.2.5"
