[package]
name = "reactive-fn-tokio"
version = "0.1.0"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
extend = "0.3"
tokio = { version = "1.2", features = [ "rt", "rt-multi-thread" ] }
reactive-fn = { path = "../reactive-fn" }

[dev-dependencies]
tokio = { version = "1.2", features = [ "time" ] }

