[package]
name = "reactive-fn"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slabmap = "0.2.0"
derive-ex = "0.1.7"
futures = "0.3.28"
serde = "1.0.188"
bumpalo = "3.14.0"
reactive-fn-macros = { version = "0.1.0", path = "../reactive-fn-macros" }

[dev-dependencies]
rstest = "0.18.2"
serde_json = "1.0.107"
rt-local = "0.1.4"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "time"] }
